--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -7,22 +7,6 @@
     android:background="#9C7B7B"
     tools:context=".Third">
 
-    <Button
-        android:id="@+id/button_checkOut2"
-        android:layout_width="108dp"
-        android:layout_height="56dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom|right"
-
-        android:text="PLACE ORDER"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.943"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <ImageView
         android:id="@+id/bottom2"
         android:layout_width="match_parent"
@@ -49,8 +33,6 @@
         android:text="Product Subtotal "
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_checkOut2"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -63,14 +45,16 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="20dp"
         android:gravity="right"
         android:text="Total Payment "
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_checkOut2"
-        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintEnd_toEndOf="@+id/button_CheckOut"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView_priceProd"
         app:layout_constraintTop_toTopOf="@+id/bottom2"
         app:layout_constraintVertical_bias="0.0" />
@@ -92,8 +76,6 @@
         android:text="Shipping Subtotal "
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_checkOut2"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_prodSubtotal" />
 
@@ -300,50 +282,22 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:srcCompat="@android:color/white" />
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="70dp"
+    <ScrollView
+        android:layout_width="386dp"
         android:layout_height="65dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
+        app:layout_constraintEnd_toEndOf="@+id/imageView5"
         app:layout_constraintStart_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
-        app:srcCompat="@android:color/darker_gray" />
+        app:layout_constraintTop_toTopOf="@+id/imageView5">
 
-    <TextView
-        android:id="@+id/textTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:text="Title"
-        app:layout_constraintBottom_toTopOf="@+id/textPrice"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
-        app:layout_constraintVertical_bias="0.571" />
-
-    <TextView
-        android:id="@+id/textPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginBottom="8dp"
-        android:text="Price"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintStart_toEndOf="@+id/imageView6" />
-
-    <TextView
-        android:id="@+id/textQuantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Quantity"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/darker_gray"
+            android:orientation="vertical"
+            android:id="@+id/thirdPage">
+        </LinearLayout>
+    </ScrollView>
 
     <ImageView
         android:id="@+id/imageView7"
@@ -442,12 +396,20 @@
         android:gravity="right"
         android:text="$ 0.00"
         android:textColor="#FFFFFF"
-        android:textSize="24sp"
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textView_total"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintEnd_toStartOf="@+id/button_CheckOut"
+        app:layout_constraintHorizontal_bias="0.564"
         app:layout_constraintStart_toStartOf="@+id/textView_total"
         app:layout_constraintTop_toTopOf="@+id/textView_total"
-        app:layout_constraintVertical_bias="0.736" />
+        app:layout_constraintVertical_bias="0.705" />
+
+    <Button
+        android:id="@+id/button_CheckOut"
+        android:layout_width="110dp"
+        android:layout_height="55dp"
+        android:text="CHECK OUT"
+        app:layout_constraintEnd_toEndOf="@+id/bottom2"
+        app:layout_constraintTop_toTopOf="@+id/bottom2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
