--- a/app/src/main/res/layout/content_second.xml
+++ b/app/src/main/res/layout/content_second.xml
@@ -497,4 +497,43 @@
         app:layout_constraintEnd_toEndOf="@+id/quantity4"
         app:layout_constraintStart_toStartOf="@+id/quantity4"
         app:layout_constraintTop_toBottomOf="@+id/quantity4" />
+
+    <ImageButton
+        android:id="@+id/imageButton1"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:onClick="share"
+        app:layout_constraintEnd_toEndOf="@+id/image"
+        app:layout_constraintStart_toEndOf="@+id/snakePlant"
+        app:layout_constraintTop_toTopOf="@+id/snakePlant"
+        app:srcCompat="?attr/actionModeShareDrawable" />
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/Pothos"
+        app:layout_constraintTop_toTopOf="@+id/Pothos"
+        app:srcCompat="?attr/actionModeShareDrawable" />
+
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView3"
+        app:layout_constraintStart_toEndOf="@+id/dracaena"
+        app:layout_constraintTop_toTopOf="@+id/dracaena"
+        app:srcCompat="?attr/actionModeShareDrawable" />
+
+    <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toEndOf="@+id/philodendronGreen"
+        app:layout_constraintTop_toTopOf="@+id/philodendronGreen"
+        app:srcCompat="?attr/actionModeShareDrawable" />
 </androidx.constraintlayout.widget.ConstraintLayout>
