--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -53,7 +53,7 @@
         android:text="Total Payment "
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/button_CheckOut"
+        app:layout_constraintEnd_toEndOf="@+id/button_PlaceOrder"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView_priceProd"
         app:layout_constraintTop_toTopOf="@+id/bottom2"
@@ -120,9 +120,9 @@
         android:id="@+id/imageView"
         android:layout_width="390dp"
         android:layout_height="290dp"
-        android:layout_marginTop="61dp"
+        android:layout_marginTop="56dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:color/white" />
@@ -398,18 +398,125 @@
         android:textColor="#FFFFFF"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_CheckOut"
+        app:layout_constraintEnd_toStartOf="@+id/button_PlaceOrder"
         app:layout_constraintHorizontal_bias="0.564"
         app:layout_constraintStart_toStartOf="@+id/textView_total"
         app:layout_constraintTop_toTopOf="@+id/textView_total"
         app:layout_constraintVertical_bias="0.705" />
 
     <Button
-        android:id="@+id/button_CheckOut"
+        android:id="@+id/button_PlaceOrder"
         android:layout_width="110dp"
         android:layout_height="55dp"
         android:text="PLACE ORDER"
+        android:onClick="placeOrder"
         app:layout_constraintEnd_toEndOf="@+id/bottom2"
         app:layout_constraintTop_toTopOf="@+id/bottom2" />
+
+    <TextView
+        android:id="@+id/textView_ValidateName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="9dp"
+        android:text="*PLEASE ENTER NAME"
+        android:textColor="#FF0000"
+        android:textSize="8sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/textPhone"
+        app:layout_constraintEnd_toStartOf="@+id/enterName"
+        app:layout_constraintHorizontal_bias="0.166"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textName"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView_ValidateName2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="10dp"
+        android:text="*PLEASE ENTER PHONE"
+        android:textColor="#FF0000"
+        android:textSize="8sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/textState"
+        app:layout_constraintEnd_toStartOf="@+id/enterPhone"
+        app:layout_constraintHorizontal_bias="0.222"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textPhone"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView_ValidateName3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="5dp"
+        android:text="*PLEASE ENTER STATE"
+        android:textColor="#FF0000"
+        android:textSize="8sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/textArea"
+        app:layout_constraintEnd_toStartOf="@+id/enterState"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textState" />
+
+    <TextView
+        android:id="@+id/textView_ValidateName4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="9dp"
+        android:text="*PLEASE ENTER AREA"
+        android:textColor="#FF0000"
+        android:textSize="8sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/textPostalCode"
+        app:layout_constraintEnd_toStartOf="@+id/enterArea"
+        app:layout_constraintHorizontal_bias="0.272"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textArea" />
+
+    <TextView
+        android:id="@+id/textView_ValidateName5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="3dp"
+        android:text="*PLEASE ENTER POSTAL CODE"
+        android:textColor="#FF0000"
+        android:textSize="8sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/textDetailedAddress"
+        app:layout_constraintEnd_toStartOf="@+id/enterPostalCode"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textPostalCode"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/textView_ValidateName6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="164dp"
+        android:layout_marginLeft="164dp"
+        android:text="*PLEASE ENTER DETAILED ADDRESS"
+        android:textColor="#FF0000"
+        android:textSize="8sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/textDetailedAddress"
+        app:layout_constraintEnd_toEndOf="@+id/textDetailedAddress"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textDetailedAddress"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
