--- a/app/src/main/res/layout/product3.xml
+++ b/app/src/main/res/layout/product3.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -38,18 +39,11 @@
                 android:layout_marginBottom="8dp"
                 android:text="DRACARNA PLANT"
                 app:layout_constraintBottom_toTopOf="@+id/textPriceProd1"
-                app:layout_constraintStart_toEndOf="@+id/imageViewProd1" />
-
-            <TextView
-                android:id="@+id/textQuantityProd1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:text="@string/productQuantity"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.94"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/imageViewProd1"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/textPriceProd1"
@@ -57,12 +51,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginLeft="12dp"
-                android:layout_marginEnd="191dp"
-                android:layout_marginRight="191dp"
+                android:layout_marginBottom="4dp"
                 android:text="$ 25"
-                app:layout_constraintBottom_toBottomOf="@+id/textQuantityProd1"
-                app:layout_constraintEnd_toStartOf="@+id/textQuantityProd1"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.003"
                 app:layout_constraintStart_toEndOf="@+id/imageViewProd1" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
